added soundcloud API

--- a/views/partials/foot.ejs
+++ b/views/partials/foot.ejs
@@ -1,4 +1,5 @@
 </div>
+<script src="//connect.soundcloud.com/sdk.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-logger/angular-logger.js"></script>
 <script src="js/bootstrap.js"></script>
