--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Angular-Driven Soundcloud Player</title>
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="style/main.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body ng-app="soundcloudPlayer">
