added ejs tmpls

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,3 +1,5 @@
+<% include ../partials/head %>
 Hello
-<div class="sc-player" data-soundcloud-player>
+<div class="sc-player" data-sc-player>
 </div>
+<% include ../partials/foot %>
