--- a/views/partials/foot.ejs
+++ b/views/partials/foot.ejs
@@ -3,6 +3,7 @@
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-logger/angular-logger.js"></script>
 <script src="js/bootstrap.js"></script>
-
+<script src="js/directives/scPlayer.js"></script>
+<script src="js/controllers/playerController.js"></script>
 </body>
 </html>
