loading title of tracks

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,7 +13,7 @@
 			<div class="sc-player__results" ng-show="formSuccess">
 				<h2>Your Playlist:</h2>
 				<ul class="list-unstyled">
-					<li ng-repeat="track in tracklist"></li>
+					<li ng-repeat="title in trackList">{{title}}</li>
 				</ul>
 			</div>
 		</div>
