--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,7 +2,7 @@
 <div class="sc-player" ng-controller="playerController">
 	<h1>Search A Category, Stream Your Music</h1>
 	<audio src="http://api.soundcloud.com/tracks/148976759/stream?client_id=201b55a1a16e7c0a122d112590b32e4a" controls></audio>
-	<form name="searchForm" ng-submit="submitForm()" ng-class="{'submit-attempt' : submitted}">
+	<form name="searchForm" ng-submit="submitForm()" ng-cloak>
 		<div clas="sc-player__search">
 			<input type="text" class="input" placeholder="Search A Category" ng-model="category" ng-disabled="formSubmitted === true && formSuccess === false">
 			<button type="submit" class="btn" ng-disabled="formSubmitted === true && formSuccess === false"><i class="fa fa-play-circle"></i> Play Music</button>
@@ -11,7 +11,7 @@
 				Loading: <i class="fa fa-spin fa-circle-o-notch fa-3x"></i>
 			</p>
 
-			<div class="sc-player__results" ng-show="formSuccess">
+			<div class="sc-player__results" ng-show="formSuccess" ng-cloak>
 				<h2>Your Playlist:</h2>
 				<ul class="list-unstyled">
 					<li ng-repeat="track in trackList">{{track.title}} | <a ng-href="{{track.uri}}">{{track.uri}}</a></li>
