--- a/app/scss/components/form.scss
+++ b/app/scss/components/form.scss
@@ -2,24 +2,36 @@ input,
 button {
 	display: inline-block;
 	vertical-align: middle;
+
+	border: 1px solid darken($purple, 10%);
+	border-radius: $border-radius;
 }
 
 input {
-	border: 1px solid darken($purple, 20%);
-	border-radius: $border-radius;
 	padding: 15px;
-	@extend %text-uppercase;
-	width: 90%;
+	margin: 0;
+	width: 100%;
 	box-shadow: 2px 2px 0 lighten($purple, 20%);
+	@extend %text-uppercase;
 }
 
 button {
+	position: absolute;
+	top: 0;
+	right: 0;
+	padding: 0 15px;
+	height: 100%;
 	cursor: pointer;
 	background: transparent;
 	border: none;
-	border-radius: $border-radius;
-	font-size: 30px;
-	border: 1px solid darken($purple, 20%);
-	color: $white;
+	font-size: 22px;
+	color: $purple;
 	@extend %reset-margin-padding;
+	border: 1px solid transparent;
+	transition: background .1s ease-in-out, color .1s ease-in-out;
+
+	&:hover {
+		background: $purple;
+		color: $white;
+	}
 }
