--- a/app/scss/components/list.scss
+++ b/app/scss/components/list.scss
@@ -2,3 +2,8 @@ ul {
 	list-style: none;
 	@extend %reset-margin-padding;
 }
+
+li {
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	margin: 0 0 4px 0;
+}
