added audio component scss

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -4,6 +4,7 @@
 @import "components/form.scss";
 @import "components/list.scss";
 @import "components/type.scss";
+@import "components/audio.scss";
 @import "components/sc-player.scss";
 
 .container {
