--- a/app/css/main.css
+++ b/app/css/main.css
@@ -25,8 +25,6 @@ body {
 
 a {
   text-decoration: none; }
-  a:hover {
-    color: #503688; }
 
 input,
 button {
@@ -63,7 +61,15 @@ ul {
 
 li {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  margin: 0 0 4px 0; }
+  margin: 0 0 4px 0;
+  position: relative; }
+  li.active {
+    color: #7f7fb1; }
+    li.active:before {
+      font-family: FontAwesome;
+      content: "\f028";
+      position: absolute;
+      left: -25px; }
 
 h1 {
   text-align: center;
