--- a/views/partials/foot.ejs
+++ b/views/partials/foot.ejs
@@ -2,6 +2,7 @@
 <script src="//connect.soundcloud.com/sdk.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-logger/angular-logger.js"></script>
+<script src="bower_components/query-string/query-string.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/directives/scPlayer.js"></script>
 <script src="js/controllers/playerController.js"></script>
